--- a/GoShopping/Base.lproj/Main.storyboard
+++ b/GoShopping/Base.lproj/Main.storyboard
@@ -58,19 +58,28 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="paperplane" translatesAutoresizingMaskIntoConstraints="NO" id="y0r-EB-TQU">
-                                    <rect key="frame" x="8" y="9" width="32" height="32"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Section Header" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJR-c7-ie1">
-                                    <rect key="frame" x="55" y="15" width="42" height="21"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Section Header" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJR-c7-ie1">
+                                    <rect key="frame" x="36" y="14.5" width="118.5" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="y0r-EB-TQU">
+                                    <rect key="frame" x="14" y="8.5" width="20" height="33"/>
+                                </imageView>
                             </subviews>
+                            <color key="backgroundColor" systemColor="systemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstItem="y0r-EB-TQU" firstAttribute="bottom" secondItem="RRx-94-lAT" secondAttribute="bottomMargin" id="7da-iH-Bb9"/>
+                                <constraint firstItem="QJR-c7-ie1" firstAttribute="leading" secondItem="y0r-EB-TQU" secondAttribute="trailing" constant="2" id="Gdb-wf-u3Q"/>
+                                <constraint firstItem="y0r-EB-TQU" firstAttribute="leading" secondItem="RRx-94-lAT" secondAttribute="leadingMargin" constant="6" id="HKb-0y-ZTJ"/>
+                                <constraint firstItem="QJR-c7-ie1" firstAttribute="centerY" secondItem="RRx-94-lAT" secondAttribute="centerY" id="Md9-KN-ND1"/>
+                                <constraint firstItem="QJR-c7-ie1" firstAttribute="centerY" secondItem="y0r-EB-TQU" secondAttribute="centerY" id="RVY-eX-ni7"/>
+                                <constraint firstItem="QJR-c7-ie1" firstAttribute="top" secondItem="RRx-94-lAT" secondAttribute="topMargin" constant="7" id="jCH-Vp-xag"/>
+                                <constraint firstItem="QJR-c7-ie1" firstAttribute="baseline" secondItem="y0r-EB-TQU" secondAttribute="baseline" id="mt5-Rg-BQK"/>
+                            </constraints>
                             <connections>
+                                <outlet property="categoryIconImage" destination="y0r-EB-TQU" id="CdY-Sk-e3I"/>
                                 <outlet property="categoryTitleLabel" destination="QJR-c7-ie1" id="3tm-JQ-kTn"/>
                             </connections>
                         </collectionReusableView>
@@ -141,6 +150,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="paperplane" width="128" height="121"/>
+        <image name="book.circle.fill" catalog="system" width="128" height="121"/>
     </resources>
 </document>
